--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-easyocr==1.7.1
-Pillow==10.1.0
-img2pdf==0.5.1
-numpy==1.26.0
-torch==2.2.1
-torchvision==0.17.1
-opencv-python-headless==4.9.0.80
+easyocr>=1.7.1
+numpy>=1.24.0
+opencv-python>=4.8.0
+Pillow>=10.0.0
+PySide6>=6.5.0
+img2pdf>=0.4.0
+scikit-learn>=1.3.0
+torch>=2.0.0
+torchvision>=0.15.0
 python-bidi==0.4.2
 PyYAML==6.0.1
 scikit-image==0.22.0
